# Twio

./: CMakeLists.txt  CMakeSettings.json  README.md  twio - Shortcut.lnk
.github/workflows/: cmake-windows.yml
src/: Test.cpp
twio/: CMakeLists.txt
twio/include/: twio_.h
twio/include/twio/: Common.h  Macros.h
twio/include/twio/core/: AdvancedReader.h  IReader.h  IWriter.h  Reader.h  ReaderBuffer.h  Writer.h
twio/include/twio/stream/: BufferInputStream.h  BufferOutputStream.h  FileInputStream.h  FileOutputStream.h  IStream.h  RedirectProtocol.h  RedirectRequest.h
twio/include/twio/utils/: FileUtil.h  IPrinter.h  Printer.h  Unwrapper.h
twio/interface/: Twio.h
twio/src/core/: AdvancedReader.cpp  Reader.cpp  ReaderBuffer.cpp  Writer.cpp
twio/src/stream/: BufferInputStream.cpp  BufferOutputStream.cpp  FileInputStream.cpp  FileOutputStream.cpp
twio/src/utils/: FileUtil.cpp  Printer.cpp  Unwrapper.cpp
